<resources>
    <string name="app_name">Survapp</string>
    <string name="action_settings">Settings</string>
    <string name="register"><u>Registro</u></string>
    <string name="recover_pass"><u>¿Olvidaste tu contraseña?</u></string>

    <string name="enviar"><u>ENVIAR</u></string>
    <string name="contraseña"><u>Contraseña</u></string>
    <string name="correo"><u>Correo</u></string>
    <string name="validar"><u>VALIDAR</u></string>
    <string name="codigo"><u>Código</u></string>
    <string name="envioCodigo"><u>Se ha enviado un código a tu cuenta de correo</u></string>
    <string name="cambiar"><u>CAMBIAR</u></string>
    <string name="validarCuenta"><u>Validar Cuenta</u></string>
    <string name="confContraseña"><u>Confirma Contraseña</u></string>
    <string name="nuevaContraseña"><u>Nueva Contraseña</u></string>
    <string name="EnvioCodigo"><u>Se ha enviado un código a tu cuenta de correo</u></string>
    <string name="resContraseña"><u>Restablecer Contraseña</u></string>
    <string name="ingresaCodigo"><u>Ingresa el código enviado a tu cuenta de correo</u></string>
    <string name="tengoCod"><u>Ya tengo un código</u></string>
    <string name="correoSofttek"><u>Ingresa tu cuenta de correo Softtek:</u></string>
    <string name="entrar"><u>ENTRAR</u></string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Inicio</item>
        <item>Agenda</item>
        <item>Salir</item>
    </string-array>
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home_icon</item>
        <item>@drawable/calendar_icon</item>
        <item>@drawable/log_icon</item>
    </array>

    <!-- Test Strings -->
    <string-array name="survey_test">
        <item>All Hands</item>
        <item>Curso QlikView</item>
        <item>Taller RunLean</item>
    </string-array>
    <string-array name="survey_date_test">
        <item>24 de Agosto 2016</item>
        <item>29 de Agosto 2016</item>
        <item>31 de Agosto 2016</item>
    </string-array>

    <string-array name="questions_test">
        <item>Pregunta de prueba 1 Diego</item>
        <item>Pregunta de prueba 2 Fernanda</item>
        <item>Pregunta de prueba 3 Fatima</item>
        <item>Pregunta de prueba 4 Tsanda</item>
    </string-array>
    <integer-array name="tipos_prueba">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </integer-array>
    <string-array name="opciones_test">
        <item>1 Diego</item>
        <item>2 Fernanda</item>
        <item>3 Fatima</item>
        <item>4 Tsanda</item>
        <item>5 Aurora</item>
    </string-array>
</resources>
