<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/softtek_logo_s" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/correo"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/register"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:padding="10dp"
            android:text="@string/entrar"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
   </LinearLayout>


    <TextView
        android:id="@+id/tvRestore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:onClick="onClick"
        android:text="@string/recover_pass"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />
</RelativeLayout>
