<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:text="@string/resContraseña"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etSetPass1"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/nuevaContraseña"
            android:maxLength="16"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/etSetPass2"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/confContraseña"
            android:maxLength="16"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/btnSetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClick"
            android:padding="10dp"
            android:text="@string/cambiar"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>
